# graphics-engine

./: .clang-format  .gitignore  CMakeLists.txt  TodoList.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glm/: CMakeLists.txt
dependencies/glm/glm/: CMakeLists.txt
res/shaders/OpenGL/: standard.frag
src/: CMakeLists.txt  Common.h  main.cpp
src/BackEnd/: BackEnd.cpp  BackEnd.h  CMakeLists.txt
src/Camera/: CMakeLists.txt  Camera.cpp
src/Engine/: CMakeLists.txt  Engine.cpp  Engine.h
src/GL_Shader/: CMakeLists.txt  GL_Shader.cpp  GL_Shader.h
src/Object/: Object.cpp  Object.h
src/Shader/: Shader.cpp  Shader.h
src/Utility/: CMakeLists.txt  Utility.cpp  Utility.h
